--- a/sauer.css
+++ b/sauer.css
@@ -68,7 +68,7 @@ body {
     height: 8%;
     left: 35%;
     top: 57%;
-    background-color: rgb(252 204 104);
+    background-color: rgb(247, 195, 82);
     border-radius: 40%;
     box-shadow: inset 0px 0px 2px 2px rgb(109, 92, 8);
     transform-origin: 20% 50%;
